# whirlwing

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
res/shaders/: fragment_shader.glsl  vertex_shader.glsl
whirlwing/: Cargo.toml
whirlwing-playground/: Cargo.toml
whirlwing-playground/src/: main.rs
whirlwing/crates/platform/wwg-win32/: Cargo.toml
whirlwing/crates/platform/wwg-win32/src/: lib.rs  win32_error.rs  win32_utils.rs  win32_window.rs  win32_windowing_context.rs  wnd_proc.rs
whirlwing/crates/platform/wwg-windows/: Cargo.toml
whirlwing/crates/platform/wwg-windows/src/: lib.rs  windows_error.rs  windows_utils.rs
whirlwing/crates/ww-log/: Cargo.toml
whirlwing/crates/ww-log/src/: lib.rs  log_utils.rs
whirlwing/crates/wwg-error/: Cargo.toml
whirlwing/crates/wwg-error/src/: lib.rs
whirlwing/crates/wwg-events/: Cargo.toml
whirlwing/crates/wwg-events/src/: input_bindings.rs  lib.rs
whirlwing/crates/wwg-log/: Cargo.toml
whirlwing/crates/wwg-log/src/: lib.rs  log_macros.rs  log_utils.rs
whirlwing/crates/wwg-math/: Cargo.toml
whirlwing/crates/wwg-math/src/: base.rs  camera.rs  core.rs  deref.rs  lib.rs  ops.rs  transform.rs  vec.rs
whirlwing/crates/wwg-window/: Cargo.toml
whirlwing/crates/wwg-window-internal/: Cargo.toml
whirlwing/crates/wwg-window-internal/src/: lib.rs  window.rs  windowing_context.rs
whirlwing/crates/wwg-window/src/: lib.rs
whirlwing/src/: app.rs  camera.rs  input.rs  lib.rs  renderer.rs  shader.rs  time.rs  window.rs
