[package]
name = "whirlwing"
version = "0.0.0"
edition = "2021"
rust-version = "1.71.0"
description = "Game Engine, written in Rust"
readme = "../README.md"
repository = "https://github.com/nukkuja/whirlwing.git"
license = "MIT OR Apache-2.0"
keywords = ["game", "engine", "graphics", "gamedev", "whirlwing"]
categories = ["game-engines", "graphics"]
workspace = "../"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ww-log = { path = "crates/ww-log", optional = true }

[features]
log = ["ww-log"]