[package]
name = "whirlwing"
version = "0.0.0"
edition = "2021"
rust-version = "1.71.0"
description = "Game Engine, written in Rust"
readme = "../README.md"
repository = "https://github.com/nukkuja/whirlwing.git"
license = "MIT OR Apache-2.0"
keywords = ["game", "engine", "graphics", "gamedev", "whirlwing"]
categories = ["game-engines", "graphics"]
workspace = "../"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wwg-log = { path = "crates/wwg-log", optional = true }
wwg-error = { path = "crates/wwg-error"}

winit = "0.28.7"
raw-window-handle = "0.5.2"
glutin = "0.30.10"
glutin-winit = "0.3.0"
gl = "0.14.0"

[features]
log = ["wwg-log"]
engine_log = ["wwg-log?/engine_log"]