[package]
name = "wwg-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wwg-log = { path = "../wwg-log" }
wwg-events = { path = "../wwg-events" }

[target.'cfg(windows)'.dependencies]
wwg-win32 = { path = "../platform/wwg-win32" }
wwg-window-internal = { path = "../wwg-window-internal" }